--- a/src/main.scss
+++ b/src/main.scss
@@ -4,3 +4,10 @@ $primary: #efa00b;
 $secondary: #00a5ac;
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-vue/src/index.scss';
+
+@include media-breakpoint-only(xs) {
+  .btn-block-xs-only {
+    display: block;
+    width: 100%;
+  }
+}
